building sbt plugin without installed sbt and reading version from pom